--- a/dbase/mypostgres.conf
+++ b/dbase/mypostgres.conf
@@ -1,5 +1,5 @@
 # -----------------------------
-# PostgreSQL configuration file
+# SGL: PostgreSQL configuration file
 # -----------------------------
 #
 # This file consists of lines of the form:
